--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.3.4",
-    "google-map-react": "^2.2.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -57,6 +56,6 @@
   "devDependencies": {
     "@types/google-map-react": "^2.1.7",
     "@types/lodash": "^4.14.191",
-    "prettier": "2.8.4"
+    "prettier": "^2.8.4"
   }
 }
